tests/valid/definite/Print_Valid_1.whiley
void System::main([string] args):
     print str(1)
